# rt-in-a-weekend.rs

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml  wesl.toml
shaders/: types.wgsl
src/: main.rs
src/app/: app.rs  cli.rs  egui_integration.rs  mod.rs  preview_widget.rs  state.rs  ui.rs
src/examples/: helpers.rs  mod.rs  scenes.rs  test_scenes.rs
src/gpu/: gpu.rs  gpu_canvas.rs  gpu_compute.rs  gpu_texture.rs  mod.rs
src/lib/: aabb.rs  bvh_node.rs  camera.rs  color.rs  constant_medium.rs  frame_buffer.rs  hittable.rs  image.rs  interval.rs  line_counter.rs  material.rs  mod.rs  perlin.rs  ppm_writer.rs  quad.rs  random.rs  ray.rs  renderer.rs  scene.rs  sphere.rs  texture.rs  util.rs  vec3.rs  viewport.rs  writer.rs
src/lib/app/: app.rs  shader.wgsl  state.rs
src/lib/materials/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  material.rs  metal.rs
src/lib/textures/: checkered.rs  image_map.rs  noise.rs  solid_color.rs  texture.rs
src/rt/: aabb.rs  bvh_node.rs  camera.rs  color.rs  constant_medium.rs  file.rs  frame_buffer.rs  hittable.rs  image.rs  interval.rs  mod.rs  onb.rs  pdf.rs  perlin.rs  ppm_writer.rs  quad.rs  random.rs  ray.rs  renderer.rs  sampler.rs  scene.rs  sphere.rs  test_helpers.rs  test_scenes.rs  test_scenes2.rs  types.rs  util.rs  viewport.rs
src/rt/app/: app.rs  state.rs
src/rt/geometry/: aabb.rs  box3d.rs  constant_medium.rs  hit_record.rs  hittable.rs  hittable_list.rs  mesh.rs  mod.rs  primitive.rs  quad.rs  scene.rs  sphere.rs  transformations.rs  triangle.rs
src/rt/gpu/: gpu.rs  gpu_compute.rs  gpu_texture.rs  mod.rs
src/rt/materials/: dielectric.rs  diffuse_light.rs  emissive.rs  ggx.rs  isotropic.rs  lambertian.rs  material.rs  metal.rs  mod.rs  pbr_material.rs
src/rt/objects/: box3d.rs  bvh_node.rs  constant_medium.rs  hit_record.rs  hittable.rs  hittable_list.rs  mesh.rs  mod.rs  quad.rs  scene.rs  sphere.rs  transformations.rs  triangle.rs
src/rt/renderer/: compute.wgsl  cpu_renderer.rs  gpu_renderer.rs  mod.rs  render_options.rs  renderer.rs  renderer_command.rs
src/rt/textures/: checkered.rs  image_map.rs  mod.rs  noise.rs  perlin_noise.rs  solid_color.rs  texture.rs
src/shaders/: compute.wgsl  display_shader.wgsl  types.wgsl
src/shaders/renderer/: bindings.wesl  bvh.wesl  camera.wesl  color.wesl  constants.wesl  float.wesl  ggx.wesl  hit_record.wesl  interval.wesl  main.wesl  material.wesl  medium.wesl  mesh.wesl  onb.wesl  pbr.wesl  pdf.wesl  primitive.wesl  quad.wesl  random.wesl  ray.wesl  renderer.wesl  scatter_record.wesl  scene.wesl  sphere.wesl  stack.wesl  texture.wesl  transform.wesl  triangle.wesl  types.wesl  vector.wesl
src/util/: color.rs  file.rs  image.rs  interval.rs  mod.rs  ppm_writer.rs  random.rs  trig.rs  types.rs  vector_ext.rs
(+8 files in other folders)
