[package]
name = "rt-in-a-weekend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
clap = { version = "4.5.60", features = ["derive"] }
encase = "0.12.0"
env_logger = "0.11.9"
futures = "0.3.32"
glam = "0.32.1"
image = "0.25.9"
log = "0.4.29"
nalgebra-glm = "0.20.0"
parry3d-f64 = "0.26.0"
pollster = "0.4.0"
rand = "0.10.0"
tobj = { version = "3.2", default-features = false, features = ["async"]}
tokio = { version = "1.50.0", features = ["full"] }
wgpu = "28.0.0"
winit = "0.30.13"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

