[package]
name = "crabapple"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
clap = { version = "4.5.60", features = ["derive"] }
encase = { version = "0.12.0" }
env_logger = "0.11.9"
futures = "0.3.32"
glam = { version = "0.30", features = ["encase"] }
image = "0.25.9"
log = "0.4.29"
pollster = "0.4.0"
rand = "0.10.0"
tobj = { version = "3.2", default-features = false, features = ["async"] }
tokio = { version = "1.50.0", features = ["full"] }
wgpu = { version = "29.0.0" }
winit = "0.30.13"
encase_enum = { git = "https://github.com/okalex/encase_enum" }
wesl = "0.3.2"
obvhs = "0.3.0"
iced = { version = "0.14.0", features = ["tokio", "advanced"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
wesl = "0.3.2"
wgsl_autogen = { git = "https://github.com/okalex/encase_enum" }

# Comment out this section when publishing/releasing
[patch.'https://github.com/okalex/encase_enum']
encase_enum = { path = "../encase_enum" }
wgsl_autogen = { path = "../encase_enum/wgsl_autogen" }
